Fixing animation freeze on iOS

--- a/src/shared/dropdowns.css
+++ b/src/shared/dropdowns.css
@@ -1,5 +1,5 @@
 .dropdown {
-  display: none;
+  visibility: hidden;
   position: absolute;
   box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12),
     0 3px 5px -1px rgba(0, 0, 0, 0.3);
@@ -28,7 +28,7 @@
 }
 
 .dropdown.active {
-  display: inline-block;
+  visibility: visible;
   animation: 0.1s dropdown-to-bottom;
 }
 
